force-app/main/default/objects/Pedido__c/Pedido__c.object-meta.xml
<CustomObject>
    <label>Pedido</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Numero do pedido</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pedidos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>