force-app/main/default/objects/Pedido__c/fields/DataDoPedido__c.field-meta.xml
<CustomField>
    <fullName>DataDoPedido__c</fullName>
    <label>Data do pedido</label>
    <type>Date</type>
</CustomField>