force-app/main/default/objects/Pedido__c/fields/Morador__c.field-meta.xml
<CustomField>
    <fullName>Morador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Morador</label>
    <referenceTo>Morador__c</referenceTo>
    <relationshipLabel>Pedidos</relationshipLabel>
    <relationshipName>Pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>